# pht_106_lab_exam

./: README.md
problem_1/: CMakeLists.txt  README.md  plot_results.py  run_with_al.mac  run_without_al.mac
problem_1/include/: action_initialization.hh  detector_construction.hh  detector_messenger.hh  event_action.hh  primary_generator_action.hh  run_action.hh  stepping_action.hh
problem_1/results/: results_with_al_nt_edep.csv  results_without_al_nt_edep.csv
problem_1/src/: action_initialization.cc  detector_construction.cc  detector_messenger.cc  event_action.cc  primary_generator_action.cc  run_action.cc  stepping_action.cc
problem_2/: CMakeLists.txt  README.md  main.cc  plot_results.py  run_air.mac  run_si.mac
problem_2/include/: action_initialization.hh  detector_construction.hh  detector_messenger.hh  primary_generator_action.hh  run_action.hh  run_messenger.hh  stepping_action.hh
problem_2/results/: bragg_air_4MeV.csv  bragg_air_5MeV.csv  bragg_air_6MeV.csv  bragg_air_7MeV.csv  bragg_air_8MeV.csv  bragg_si_4MeV.csv  bragg_si_5MeV.csv  bragg_si_6MeV.csv  bragg_si_7MeV.csv  bragg_si_8MeV.csv
problem_2/src/: action_initialization.cc  detector_construction.cc  detector_messenger.cc  primary_generator_action.cc  run_action.cc  run_messenger.cc  stepping_action.cc
problem_3/: CMakeLists.txt  README.md  main.cc  plot_results.py  run.mac
problem_3/include/: detector_construction.hh  event_action.hh  primary_generator_action.hh  run_action.hh  stepping_action.hh
problem_3/src/: action_initialization.cc  detector_construction.cc  event_action.cc  (+3 more)
